Comments changed for clarity

--- a/python_data_structure_manipulation_exercises.ipynb
+++ b/python_data_structure_manipulation_exercises.ipynb
@@ -233,7 +233,7 @@
     }
    ],
    "source": [
-    "# STEP ONE: EVALUATING THE DATASET\n",
+    "# STEP ONE: EVALUATING THE DATASET AND ACCESSING THE 'SPECIES' KEY, VALUE PAIR\n",
     "\n",
     "print(type(students))\n",
     "\n",
@@ -465,7 +465,7 @@
     }
    ],
    "source": [
-    "# STEP TWO: COLLECTION ALL OF THE SPECIES DATA\n",
+    "# STEP TWO: CAPTURING THE SPECIES DATA\n",
     "# Now that we have successfully shown the relative path that needs to be taken to\n",
     "# access a single piece of species data, we need to develop an function that can\n",
     "# capture all of the species data across all elements in the list\n",
@@ -566,11 +566,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### How many grades does each student have?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Plan of action: Repeat most steps from previous question, but at the end, \n",
+    "# instead of appending the grade values into a list, use a counter to count the number\n",
+    "# of grades for each student and then append that into a list\n",
+    "# if time, create a dictionary of students to grade by zipping their names and their\n",
+    "# grade counts together"
+   ]
   }
  ],
  "metadata": {
