Cleaning up bonus 2 explanation comments

--- a/function_exercises.ipynb
+++ b/function_exercises.ipynb
@@ -400,13 +400,13 @@
     "\n",
     "# Testing the function\n",
     "print(normalize_name(\" 3 A#ples . in a pod324\"))\n",
-    "            \n",
-    "        "
+    "\n",
+    "# Note: This function can also be created more simply by using .isidentifier()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 104,
    "metadata": {
     "scrolled": true
    },
@@ -415,17 +415,215 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   apples  \n",
-      "apples\n",
-      "apples\n"
+      "[1, 3, 6, 10]\n",
+      "[1, 2, 3]\n",
+      "[1, 3, 6, 10, 15, 21, 28, 36, 45, 55, 66, 78]\n"
      ]
     }
    ],
    "source": [
-    "apples_whitespace = '   apples  '\n",
-    "apples_no_whitespace = apples_whitespace.strip()\n",
-    "print(apples_whitespace)\n",
-    "print(apples_no_whitespace)"
+    "# QUESTION 11\n",
+    "# Write a function named cumulative_sum that accepts a list of numbers and\n",
+    "# returns a list that is the cumulative sum of the numbers in the list.\n",
+    "# - cumulative_sum([1, 1, 1]) returns [1, 2, 3]\n",
+    "# - cumulative_sum([1, 2, 3, 4]) returns [1, 3, 6, 10]\n",
+    "\n",
+    "def cumulative_sum(lst_num):\n",
+    "    cumul_sum_lst = []\n",
+    "    for i in range(len(lst_num)):\n",
+    "        cumul_sum_lst.append(sum(lst_num[:i + 1]))\n",
+    "    return cumul_sum_lst\n",
+    "\n",
+    "# Testing the function\n",
+    "print(cumulative_sum([1, 2, 3, 4]))\n",
+    "print(cumulative_sum([1, 1, 1]))\n",
+    "print(cumulative_sum([1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10:45\n",
+      "16:30\n",
+      "Please input the time in the correct format.\n",
+      "Please input the time in the correct format.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# BONUS 1\n",
+    "# Create a function named twelveto24. It should accept a string in the format\n",
+    "# 10:45am or 4:30pm and return a string that is the representation of the time\n",
+    "# in a 24-hour format. Bonus write a function that does the opposite.\n",
+    "def twelveto24(time):\n",
+    "    try:\n",
+    "        hour = ''\n",
+    "        minute = ''\n",
+    "        colon_position = time.rindex(':')\n",
+    "        formatted_time = ''\n",
+    "        if time[-2:] == 'am':\n",
+    "            formatted_time = time[:-2]\n",
+    "            return formatted_time       \n",
+    "        elif time[-2:] == 'pm':\n",
+    "            hour = int(time[:colon_position]) + 12\n",
+    "            minute = time[colon_position + 1:-2]\n",
+    "            formatted_time = str(hour) + ':' + minute\n",
+    "            return formatted_time\n",
+    "        else:\n",
+    "            return \"Please input the time in the correct format.\"\n",
+    "    except ValueError:\n",
+    "        return 'Please input the time in the correct format.'\n",
+    "    \n",
+    "# Testing the function\n",
+    "print(twelveto24('10:45am'))\n",
+    "print(twelveto24('4:30pm'))\n",
+    "print(twelveto24('beans'))\n",
+    "print(twelveto24('16:30'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "27\n",
+      "2385\n",
+      "18279\n"
+     ]
+    }
+   ],
+   "source": [
+    "# BONUS 2\n",
+    "# Create a function named col_index. It should accept a spreadsheet column name, \n",
+    "# and return the index number of the column.\n",
+    "# - col_index('A') returns 1\n",
+    "# - col_index('B') returns 2\n",
+    "# - col_index('AA') returns 27\n",
+    "# Note: In both google sheets and excel\n",
+    "# - after 'A' (26 = 26 from 'A') the next column is 'AA' (27 = 26 from 'A' and 1 from 'A')\n",
+    "# - after 'AZ' (52 = 26 from 'A' and 26 from 'Z') the next column is 'BA' (53 = 52 from 'B' and 1 from 'A')\n",
+    "# - after 'BZ' (78 = 52 from 'B' and 26 from 'Z') the next column is 'CA' (79 = 78 from 'C' and 1 from 'A')\n",
+    "# - after 'ZZ' (702 = 676 from 'Z' and 26 from 'Z') the next column is 'AAA' (703 = 702 from 'AA' and 1 from 'A')\n",
+    "# Lets breakdown 'AAA' further:\n",
+    "# - The rightmost position is equal to an int value of A-Z:1-26\n",
+    "# - The next position #_ is equal to 26 * the int value of A-Z:1-26\n",
+    "# - The next position #__ is equal to 26 * 26 * the int value of A-Z:1-26\n",
+    "# Therefore, for column AAA:\n",
+    "# - The leftmost A = 26 * 26 * 1 = 676\n",
+    "# - The middle A = 26 * 1 = 26\n",
+    "# - The rightmost A = 1\n",
+    "# - SUM(676 + 26 + 1) = 703\n",
+    "# By extension, column AAAA would equal:\n",
+    "# - Starting from the left:\n",
+    "# - The first A = 26 * 26 * 26 * 1 = 17576\n",
+    "# - The second A = 26 * 26 * 1 = 676\n",
+    "# - The third A = 26 * 1 = 26\n",
+    "# - The fourth A = 1\n",
+    "# - SUM(17576 + 676 + 26 + 1) = 18279\n",
+    "# In summary:\n",
+    "# - The rightmost position holds an int value equal to A-Z: 1-26 (see dictionary)\n",
+    "# - For n moves to the left from that rightmost letter, the letter in that position is (26)^n * lettervalue (A-Z: 1-26)\n",
+    "\n",
+    "def col_index(col_name):\n",
+    "    letter_to_num = {\n",
+    "                    'A': 1, 'B': 2, 'C': 3, 'D': 4, 'E': 5, 'F': 6, 'G': 7,\n",
+    "                    'H': 8, 'I': 9, 'J':10, 'K': 11, 'L': 12, 'M': 13, 'N': 14,\n",
+    "                    'O': 15, 'P': 16, 'Q': 17, 'R': 18, 'S': 19, 'T': 20, 'U': 21,\n",
+    "                    'V': 22, 'W': 23, 'X': 24, 'Y': 25, 'Z': 26\n",
+    "                     } # Here we create a dictionary that maps letters to values\n",
+    "    col_value = 0 # This is going to store the number we will eventually return\n",
+    "    col_length = len(col_name) # We need to get the length of the string, in order to iterate backwards through the string the correct number of times\n",
+    "    for i in range(-1, -(len(col_name)+1), -1): # We are going to iterate backwards, starting at -1, and ending at the first position, going -1 step\n",
+    "                                                # at a time. This i value will be used as the index for our elements of the string\n",
+    "        col_value += letter_to_num[(col_name[i])] * (26 ** -(i + 1))\n",
+    "        # To get the final value, we need to apply a formula. Lets walk through the string 'CMS'\n",
+    "        # FIRST ITERATION\n",
+    "        # The very first check is on col_name[-1], the rightmost position. It will take the value of that letter\n",
+    "        # by referencing the dictionary letter_to_num (S = 19), then it will multiply that value by (26 ** -(-1 + 1))\n",
+    "        # (26 ** -(-1 + 1)) = 1. So 19 * 1 = 19\n",
+    "        # it will then add that to col_value (col_value is now 19)\n",
+    "        # SECOND ITERATION\n",
+    "        # The next check is on col_name[-2], the second to last position. It will take the value of that letter\n",
+    "        # by referencing the dictionary letter_to_num (M = 13), then it will multiply that value by (26 ** -(-2 + 1))\n",
+    "        # (26 ** -(-2 + 1)) = 26. So 13 * 26 = 338\n",
+    "        # it will then add that to col_value (col_value is now 338)\n",
+    "        # THIRD ITERATION\n",
+    "        # The next check is on col_name[-3], the final position to check. It will take the value of that letter\n",
+    "        # by referencing the dictionary letter_to_num (C = 3), then it will multiply that value by (26 ** -(-3 + 1))\n",
+    "        # (26 ** -(-3 + 1)) = 676. So 3 * 676 = 2028\n",
+    "        # it will then add that to col_value (col_value is now 2385)\n",
+    "        # We have reached our target in our range (-(len(col_name) + 1)) or -(3 + 1) == -4. Remember that our target in\n",
+    "        # a range is not inclusive, so by setting -4 as our target, our last iteration was -3. This is why we needed to add\n",
+    "        # +1 in line 41 where we define the ending spot. \n",
+    "        # Iterations stop. We have the correct col_value and can return it. \n",
+    "    return col_value\n",
+    "\n",
+    "# Testing the function\n",
+    "print(col_index('A')) # prints 1\n",
+    "print(col_index('B')) # prints 2\n",
+    "print(col_index('AA')) # prints 27\n",
+    "print(col_index('CMS')) # prints 2385\n",
+    "print(col_index('AAAA')) # prints 18279"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[-1, -2, -3]"
+      ]
+     },
+     "execution_count": 140,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Previous attempt - FAILURE due to misunderstanding how spreadsheets create column headers\n",
+    "# def col_index(col_name):\n",
+    "#     letter_to_num = {\n",
+    "#                     'A': 1, 'B': 2, 'C': 3, 'D': 4, 'E': 5, 'F': 6, 'G': 7,\n",
+    "#                     'H': 8, 'I': 9, 'J':10, 'K': 11, 'L': 12, 'M': 13, 'N': 14,\n",
+    "#                     'O': 15, 'P': 16, 'Q': 17, 'R': 18, 'S': 19, 'T': 20, 'U': 21,\n",
+    "#                     'V': 22, 'W': 23, 'X': 24, 'Y': 25, 'Z': 26\n",
+    "#                     }\n",
+    "#     col_value = 0\n",
+    "#     col_length = len(col_name)\n",
+    "#     for letter in col_name:\n",
+    "#         col_value += letter_to_num[letter]\n",
+    "#     col_value = col_value + 25 * (col_length - 1)\n",
+    "#     return col_value\n",
+    "\n",
+    "# Testing how backwards iteration works:\n",
+    "test_len = 'A'\n",
+    "list(range(-1, -(len(test_len) + 1), -1))\n",
+    "test_len = 'AA'\n",
+    "list(range(-1, -(len(test_len) + 1), -1))\n",
+    "test_len = 'AAA'\n",
+    "list(range(-1, -(len(test_len) + 1), -1))\n",
+    "# Testing the function\n",
+    "# print(col_index('A'))\n",
+    "# print(col_index('B'))\n",
+    "# print(col_index('AA'))\n",
+    "# print(col_index('AAB')) #FAILED\n",
+    "# print(col_index('AAD')) #FAILED\n",
+    "# print(col_index('AAAM')) #FAILED"
    ]
   },
   {
@@ -433,7 +631,21 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Bonus 2 Code without comment wall\n",
+    "def col_index(col_name):\n",
+    "    letter_to_num = {\n",
+    "                    'A': 1, 'B': 2, 'C': 3, 'D': 4, 'E': 5, 'F': 6, 'G': 7,\n",
+    "                    'H': 8, 'I': 9, 'J':10, 'K': 11, 'L': 12, 'M': 13, 'N': 14,\n",
+    "                    'O': 15, 'P': 16, 'Q': 17, 'R': 18, 'S': 19, 'T': 20, 'U': 21,\n",
+    "                    'V': 22, 'W': 23, 'X': 24, 'Y': 25, 'Z': 26\n",
+    "                     }\n",
+    "    col_value = 0\n",
+    "    col_length = len(col_name)\n",
+    "    for i in range(-1, -(len(col_name)+1), -1):\n",
+    "        col_value += letter_to_num[(col_name[i])] * (26 ** -(i + 1))\n",
+    "    return col_value"
+   ]
   }
  ],
  "metadata": {
