Corrected comments in import_exercises.ipynb and import_exercises.py

--- a/import_exercises.ipynb
+++ b/import_exercises.ipynb
@@ -651,8 +651,7 @@
     }
    ],
    "source": [
-    "# Now lets get the average balance by summing these float values and dividing them by the total number of values\n",
-    "total_user_balances = 0\n",
+    "# Now lets get the total balance by summing these float values\n",
     "for balance in cleaned_list_of_balances:\n",
     "    total_user_balances += balance\n",
     "\n",
