Added a few print(n) into import_exercises.ipynb for reading clarity

--- a/import_exercises.ipynb
+++ b/import_exercises.ipynb
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -596,6 +596,8 @@
      "output_type": "stream",
      "text": [
       "['$2,097.02', '$3,654.02', '$1,536.02', '$3,919.64', '$3,681.39', '$1,694.42', '$1,214.10', '$2,930.31', '$1,944.15', '$2,839.22', '$2,467.31', '$3,304.99', '$3,844.42', '$3,594.99', '$2,940.24', '$3,062.41', '$3,067.82', '$2,646.76', '$2,227.79']\n",
+      "\n",
+      "\n",
       "The number of users with balances is: 19\n"
      ]
     }
@@ -607,6 +609,7 @@
     "\n",
     "# We can see that each element of this list is a single value\n",
     "# Lets make sure that every user had a balance\n",
+    "print('\\n')\n",
     "print(f\"The number of users with balances is: {len(list_of_balances)}\")"
    ]
   },
@@ -996,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1004,6 +1007,8 @@
      "output_type": "stream",
      "text": [
       "['Hello, Hebert Estes! You have 4 unread messages.', 'Hello, Allison Wynn! You have 19 unread messages.', 'Hello, Jacobs Floyd! You have 5 unread messages.', 'Hello, Fay Hammond! You have 10 unread messages.', 'Hello, Chasity Marsh! You have 9 unread messages.', 'Hello, Camacho Cortez! You have 19 unread messages.', 'Hello, Avery Flynn! You have 13 unread messages.', 'Hello, Michael Cash! You have 17 unread messages.', 'Hello, Madeleine Bray! You have 2 unread messages.', 'Hello, Corine French! You have 18 unread messages.', 'Hello, Trudy Cummings! You have 2 unread messages.', 'Hello, Peggy Mayer! You have 13 unread messages.', 'Hello, Chan Hurley! You have 7 unread messages.', 'Hello, Diaz Pena! You have 13 unread messages.', 'Hello, Heath Castaneda! You have 12 unread messages.', 'Hello, Greer Blankenship! You have 7 unread messages.', 'Hello, Coffey Hayes! You have 19 unread messages.', 'Hello, Leanne Hurst! You have 5 unread messages.', 'Hello, Ewing Larson! You have 16 unread messages.']\n",
+      "\n",
+      "\n",
       "['4', '19', '5', '10', '9', '19', '13', '17', '2', '18', '2', '13', '7', '13', '12', '7', '19', '5', '16']\n"
      ]
     }
@@ -1027,13 +1032,14 @@
     "        if character.isdigit(): #If the character is a numeric character\n",
     "            digit_string += character # The character is added to our digit_string\n",
     "    list_unread_digits.append(digit_string) #Once we have iterated through a message, we append that digit_string to our list\n",
-    "    \n",
+    "\n",
+    "print('\\n')\n",
     "print(list_unread_digits) # We see that we now have a list of strings only containing the number of unread messages for each user"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
