Finished up through to last 6 questions

--- a/python_data_structure_manipulation_exercises.ipynb
+++ b/python_data_structure_manipulation_exercises.ipynb
@@ -1115,10 +1115,81 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 186,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[73, 66, 83, 92], [78, 98, 85, 65], [87, 79, 90, 99], [74, 99, 93, 89], [70, 92, 65, 99]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Each pet is stored as a dictionary in a list mapped to the pet key\n",
+    "# If we use the length of the value for the pet key, we can filter the grades that we collect from the dataset\n",
+    "student_grades_2_plus_pets = [student['grades'] for student in students if len(student['pets']) >= 2]\n",
+    "print(student_grades_2_plus_pets)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 194,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The average grade for students who have 2 or more pets is 83.8\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Now that we have all the grades for the students with at least 2 pets, we can find an average \n",
+    "grade_total_2_plus_pets = 0\n",
+    "num_grades_total_2_plus_pets = 0\n",
+    "for grades in student_grades_2_plus_pets:\n",
+    "    for grade in grades:\n",
+    "        grade_total_2_plus_pets += grade\n",
+    "        num_grades_total_2_plus_pets += 1\n",
+    "\n",
+    "avg_grade_2_plus_pets = grade_total_2_plus_pets / num_grades_total_2_plus_pets\n",
+    "print(f\"The average grade for students who have 2 or more pets is {avg_grade_2_plus_pets}\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "#### How many students have 3 pets?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 202,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There is 1 student with 3 pets.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# We can count the length of a list made from the dataset where we only include dictionaries\n",
+    "# that have a pet value length of 3\n",
+    "student_dict_3_pets = [student for student in students if len(student['pets']) == 3]\n",
+    "if len(student_dict_3_pets) == 0:\n",
+    "    print(\"There are no students with 3 pets.\")\n",
+    "elif len(student_dict_3_pets) == 1:\n",
+    "    print(\"There is 1 student with 3 pets.\")\n",
+    "else:\n",
+    "    print(f\"There are {len(student_dict_3_pets)} students with 3 pets.\")"
    ]
   },
   {
@@ -1182,6 +1253,55 @@
    "metadata": {},
    "source": [
     "#### What is the average grade for web development students? "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 204,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[70, 91, 82, 71], [70, 89, 69, 65], [78, 98, 85, 65], [69, 94, 89, 86], [82, 92, 91, 65], [80, 70, 68, 98], [73, 99, 86, 98]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Filter out only the web development students\n",
+    "student_grades_web_dev = [student['grades'] for student in students if student['course'] == 'web development']\n",
+    "print(student_grades_web_dev)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 205,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The average grade of students with no pets is 81.17857142857143\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Sum up the grades and divide by the total number of grades\n",
+    "grade_total_web_dev = 0\n",
+    "\n",
+    "for grades in student_grades_web_dev:\n",
+    "    for grade in grades:\n",
+    "        grade_total_web_dev += grade\n",
+    "        \n",
+    "total_num_grades_web_dev = 0\n",
+    "for grades in student_grades_web_dev:\n",
+    "    total_num_grades_web_dev += len(grades)\n",
+    "\n",
+    "# Divide by the number of grades to get the average\n",
+    "\n",
+    "print(f\"The average grade of students with no pets is {grade_total_web_dev / total_num_grades_web_dev}\")"
    ]
   },
   {
